[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "plaud-ai"
version = "0.1.0"
requires-python = ">=3.11"
description = "Python SDK for plaud.ai API"
readme = "README.md"
keywords = ["plaud", "plaud.ai"]
maintainers = [
    {name = "Dmytro Litvinov", email = "me@dmytrolitvinov.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
license = {text = "MIT License"}
dependencies = [
    "requests"
]

[project.urls]
Homepage = "https://github.com/DmytroLitvinov/python-plaud-ai"
Issues = "https://github.com/DmytroLitvinov/python-plaud-ai/issues"
Changelog = "https://github.com/DmytroLitvinov/python-plaud-ai/blob/main/CHANGELOG.md"

# Ruff
# ----
[tool.ruff]
src = ["plaud_ai"]
line-length = 120
indent-width = 4

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]

# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"
